--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,5 @@
-*.gem
-*.rbc
-.bundle
-.config
-coverage
-InstalledFiles
-lib/bundler/man
-pkg
-rdoc
-spec/reports
-test/tmp
-test/version_tmp
-tmp
-*.DS_STORE
-build/
-.cache
-.vagrant
-.sass-cache
-
-# YARD artifacts
-.yardoc
-_yardoc
-doc/
-.idea/
-
-# Vagrant artifacts
-ubuntu-*-console.log
+node_modules/
+npm-debug.log
+_site/
+source/slate/js/lib/*.min.js
+source/slate/css/*.css
