--- a/package.json
+++ b/package.json
@@ -1,18 +1,27 @@
 {
   "name": "@slatedocs/slate",
-  "version": "3.0.0",
+  "version": "3.0.0-dev.0",
   "description": "Beautiful API Documentation",
+  "main": "./slate.js",
+  "bin": "./slate.js",
   "scripts": {
     "postinstall": "node setup",
+    "setup": "node setup",
     "lint": "npx eslint .*.js source/*.js",
     "lint.app": "npx eslint source/slate/js/app/*.js",
     "lint.ejs": "npx ejs-lint source/_includes/slate.ejs",
-    "test": "npx eleventy --input=source/*.md",
-    "build.sass": "npx sass --update --style compressed --no-source-map source/slate/css",
-    "build.11t": "npx eleventy --input=source/*.md",
-    "build": "npm run build.sass && npm run build.11t",
+    "make": "npx eleventy --input=source/*.md",
+    "test": "npx mocha",
+    "build.sass": "npx sass --update --style compressed --no-source-map ./source/slate/css",
+    "build.sass.local": "cross-var npx sass --update --style compressed --no-source-map $SLATEDIR/slate/css:$SLATEDIR/slate/css",
+    "build.sass.test": "cross-var npx sass --update --style expanded --no-source-map $SLATEDIR/slate/css:$SLATEDIR/slate/css",
+    "build.11ty": "npx eleventy --input=./source/*.md",
+    "build.local": "npm run build.sass.local && cross-var npx eleventy --input=$SLATEDIR/*.md --output=$SLATEDIR/_site",
+    "build.test": "npm run build.sass.test && cross-var npx eleventy --input=$SLATEDIR/*.md --output=./_site",
+    "build": "npm run build.sass && npm run build.11ty",
     "debug": "DEBUG=Eleventy* npx eleventy --dryrun --input=source/*.md",
-    "serve": "npm run build.sass && npx eleventy --input=source/*.md --serve --port=4567"
+    "serve": "npm run build.sass && npx eleventy --input=source/*.md --serve --port=4567",
+    "serve.local": "cross-var npm run build.sass.local && npx eleventy --input=$SLATEDIR/*.md --output=$SLATEDIR/_site --serve --port=4567"
   },
   "keywords": [
     "slate",
@@ -26,25 +35,29 @@
     "Mike Ralphson"
   ],
   "license": "Apache-2.0",
-  "private": true,
   "dependencies": {
-    "@11ty/eleventy": "^0.11.0",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
+    "@11ty/eleventy": "^0.11.1",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.4",
     "cheerio": "^1.0.0-rc.3",
+    "cross-var": "^1.1.0",
     "imagesloaded": "^4.1.4",
     "jquery": "^3.5.1",
-    "lunr": "^2.3.8",
-    "markdown-it": "^11.0.0",
-    "markdown-it-anchor": "^5.3.0",
-    "sass": "^1.26.9"
+    "lunr": "^2.3.9",
+    "markdown-it": "^12.0.3",
+    "markdown-it-anchor": "^7.0.0",
+    "markdown-it-prism": "^2.1.4",
+    "sass": "^1.30.0",
+    "shelljs": "^0.8.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "mocha": "^8.2.1"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/slatedocs/slate3.git"
+    "url": "git+https://github.com/slatedocs/slate.git"
   },
   "bugs": {
-    "url": "https://github.com/slatedocs/slate3/issues"
+    "url": "https://github.com/slatedocs/slate/issues"
   },
-  "homepage": "https://github.com/slatedocs/slate3#readme"
+  "homepage": "https://github.com/slatedocs/slate#readme"
 }
