build: set keep_files for v3_deploy

--- a/.github/workflows/v3_deploy.yml
+++ b/.github/workflows/v3_deploy.yml
@@ -27,4 +27,5 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         destination_dir: v3
         publish_dir: ./_site
+        keep_files: true
 
