--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,25 +8,23 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        ruby-version: [2.6, 2.7, '3.0', 3.1]
+    runs-on: ubuntu-20.04
+    env:
+      ruby-version: 2.6
 
     steps:
     - uses: actions/checkout@v2
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: ${{ matrix.ruby-version }}
+        ruby-version: ${{ env.ruby-version }}
 
     - uses: actions/cache@v2
       with:
         path: vendor/bundle
-        key: gems-${{ runner.os }}-${{ matrix.ruby-version }}-${{ hashFiles('**/Gemfile.lock') }}
+        key: gems-${{ runner.os }}-${{ env.ruby-version }}-${{ hashFiles('**/Gemfile.lock') }}
         restore-keys: |
-          gems-${{ runner.os }}-${{ matrix.ruby-version }}-
+          gems-${{ runner.os }}-${{ env.ruby-version }}-
           gems-${{ runner.os }}-
 
     - run: bundle config set deployment 'true'
